- adding support to query multiple graphs