@@ -4,15 +4,38 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
 import java.io.File;
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 
 import org.aksw.kbox.kibe.tdb.TDBTest;
+import org.junit.Assert;
+import org.junit.BeforeClass;
 import org.junit.Test;
 
 import com.hp.hpl.jena.query.ResultSet;
 
 public class KBoxTest {
+	
+	@BeforeClass
+	public static void setUp() throws IOException {
+		File indexFile = File.createTempFile("knowledgebase","idx");		
+		URL[] filesToIndex = new URL[1];
+		URL url = TDBTest.class.getResource("/org/aksw/kbox/kibe/dbpedia_3.9.xml");
+		filesToIndex[0] = url;
+		KBox.createIndex(indexFile, filesToIndex);
+		KBox.installKB(new URL("http://dbpedia39"),
+									indexFile.toURI().toURL());
+		indexFile.deleteOnExit();
+		
+		indexFile = File.createTempFile("knowledgebase","idx");		
+		url = TDBTest.class.getResource("/org/aksw/kbox/kibe/foaf.rdf");
+		filesToIndex[0] = url;		
+		KBox.createIndex(indexFile, filesToIndex);
+		KBox.installKB(new URL("http://foaf"),
+									indexFile.toURI().toURL());
+		indexFile.deleteOnExit();
+	}
 	
 	@Test
 	public void testPrintKBs() throws Exception {
@@ -33,16 +56,9 @@ public class KBoxTest {
 	}
 	
 	@Test
-	public void testInstallProcess() throws Exception {
-		File indexFile = new File("knowledgebase.idx");
-		URL[] filesToIndex = new URL[1];
-		URL url = TDBTest.class.getResource("/org/aksw/kbox/kibe/dbpedia_3.9.xml");
-		filesToIndex[0] = url;
-		KBox.createIndex(indexFile, filesToIndex);
-		KBox.installKB(new URL("http://my.knowledgebox"), 
-									indexFile.toURI().toURL());
-		ResultSet rs = KBox.query(new URL("http://my.knowledgebox"), 
-									"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}");
+	public void testInstallProcess() throws Exception {		
+		ResultSet rs = KBox.query("Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}", 
+				new URL("http://dbpedia39"));
 		int i = 0;
 		while (rs != null && rs.hasNext()) {
 			rs.next();
@@ -53,8 +69,7 @@ public class KBoxTest {
 	
 	@Test
 	public void testQueryInstalledKB() throws Exception {
-		ResultSet rs = KBox.query(new URL("http://my.knowledgebox"), 
-									"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}");
+		ResultSet rs = KBox.query("Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}", new URL("http://dbpedia39"));
 		int i = 0;
 		while (rs != null && rs.hasNext()) {
 			rs.next();
@@ -62,8 +77,8 @@ public class KBoxTest {
 		}
 		assertEquals(19, i);
 		
-		rs = KBox.query(new URL("http://my.knowledgebox"), 
-				"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}");
+		rs = KBox.query( 
+				"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}", new URL("http://dbpedia39"));
 		i = 0;
 		while (rs != null && rs.hasNext()) {
 		rs.next();
@@ -74,13 +89,15 @@ public class KBoxTest {
 	
 	@Test
 	public void testQueryNotInstalledKB() throws Exception {
+		boolean exception = false;
 		try {
 			@SuppressWarnings("unused")
-			ResultSet rs = KBox.query(new URL("http://my.knowledgebox.com"), 
-					"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}");
-			throw new Exception("The query should have returned an Exception.");
-		} catch (Exception e) {			
-		}	
+			ResultSet rs = KBox.query(
+					"Select ?p where {<http://dbpedia.org/ontology/Place> ?p ?o}", new URL("http://dbpedia39.o"));
+		} catch (Exception e) {
+			exception = true;
+		}
+		Assert.assertTrue("The query should have returned an Exception.", exception);
 	}
 	
 	@Test
